feat: add exception handling